# VKR

./: CMakeLists.txt  DCP.hpp  Fourier_coefficients.cpp  Fourier_coefficients.hpp  Hamming_decoder_selection.cpp  Hamming_decoder_selection.hpp  forward.hpp  frame_analizer.cpp  frame_analizer.hpp  main.cpp  sin_cos_data.cpp  sin_cos_data.hpp  vf_field_2.c  video_file.cpp  video_file.hpp  video_fragment.cpp  video_fragment.hpp  video_frame.cpp  video_frame.hpp
